// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render default button 1`] = `
"<button class=\\"er-button ellipsis er-button--default er-button--default\\">
  <!---->Submit
</button>"
`;

exports[`should trigger click event 1`] = `
"<button class=\\"er-button ellipsis er-button--large er-button--primary\\">
  <!---->Submit
</button>"
`;
